@@ -1,23 +1,24 @@
-package com.yandex.model;
+package com.yandex.taskmanager;
 
-import com.yandex.taskmanager.Task;
+import com.yandex.model.Task;
 
 import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private List<Task> history = new LinkedList<>();
+    private final List<Task> history = new LinkedList<>();
+    private static final int maxSize = 10;
 
     @Override
     public void add(Task task) {
-        if(history.size()==10) {
-            history.removeFirst();
+        if(history.size()==maxSize) {
+            history.remove(0);
         }
         history.add(task);
     }
 
     @Override
     public  List<Task> getHistory() {
-        return history;
+        return List.copyOf(history);
     }
 }
