@@ -1,7 +1,7 @@
-package com.yandex.model;
+package com.yandex.taskmanager;
 
-import com.yandex.taskmanager.Status;
-import com.yandex.taskmanager.Task;
+import com.yandex.model.Status;
+import com.yandex.model.Task;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
@@ -10,12 +10,11 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 
 class InMemoryTaskManagerTest {
-    InMemoryHistoryManager manager = new InMemoryHistoryManager();
+    private final InMemoryHistoryManager manager = new InMemoryHistoryManager();
 
     @Test
     public void newTasksRetainThePreviousState() {
         // Задачи, добавляемые в HistoryManager, сохраняют предыдущую версию задачи и её данных.
-        // ??? Task в history должен хранить состояние task на момент добавления?
         Task task1 = new Task("Тренировка", "Силовая тренировка");
         manager.add(task1);
 
@@ -26,8 +25,8 @@ class InMemoryTaskManagerTest {
         List<Task> history = manager.getHistory();
 
         assertFalse(history.isEmpty());
-        assertEquals(task1.getStatus(), history.getFirst().getStatus());
-        assertEquals(task1.getName(), history.getFirst().getName());
-        assertEquals(task1.getDescription(), history.getFirst().getDescription());
+        assertEquals(task1.getStatus(), history.get(0).getStatus());
+        assertEquals(task1.getName(), history.get(0).getName());
+        assertEquals(task1.getDescription(), history.get(0).getDescription());
     }
 }
